fix(markdown): image overflow in markdown

--- a/src/app/markdown/markdown.component.less
+++ b/src/app/markdown/markdown.component.less
@@ -8,6 +8,9 @@
 .editor-container {
   width: 100%;
   background-color: @color-pf-black-200;
+  img {
+    max-width: 100%;
+  }
   .editor {
     word-wrap: break-word;
     .editor-markdown {
